<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/topAppBar"
            layout="@layout/layout_top_app_bar_login"
            app:title="@{@string/register}" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/login_top_app_bar_height"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            tools:context=".ui.feature.login.signUp.SignUpFragment">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:ellipsize="end"

                android:text="@string/login_forgot_pass_text_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:ellipsize="end"
                android:hint="@string/prompt_email"
                android:lines="1"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/tvDescription"
                tools:layout_editor_absoluteX="0dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:hint="@string/prompt_password"

                android:inputType="textPassword"
                android:lines="1"
                app:layout_constraintTop_toBottomOf="@id/et_email"
                tools:layout_editor_absoluteX="24dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:hint="@string/prompt_password_confirm"
                android:inputType="textPassword"
                android:lines="1"
                app:layout_constraintTop_toBottomOf="@id/etPassword"
                tools:layout_editor_absoluteX="24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                style="@style/LoginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:backgroundTint="#FFAB91"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPasswordConfirm" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoogleLogin"
                style="@style/LoginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_top"
                android:backgroundTint="#BBDEFB"
                android:drawableLeft="@drawable/ic_google"
                android:text="@string/sign_up_with_google"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnSignUp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>


