<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/topAppBar"
            layout="@layout/layout_top_app_bar_login"
            app:title="@{@string/login_forgot_password_title}" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/login_top_app_bar_height"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            tools:context=".ui.feature.login.signUp.SignUpFragment">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_top"
                android:ellipsize="end"
                android:textSize="16dp"
                android:text="@string/enter_your_email_here"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmailLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_top"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescription">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="this is invisible notification for UserName"
                    android:textColor="#F15B5B"
                    android:visibility="invisible" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSend"
                style="@style/LoginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_top"
                android:backgroundTint="#80CBC4"
                android:text="@string/send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmailLayout" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_top"
                android:layout_marginBottom="@dimen/item_margin_bottom"
                android:text="@string/or"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSend">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLoginGoogle"
                style="@style/LoginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_top"
                android:backgroundTint="#FFCDD2"
                android:drawableLeft="@drawable/ic_google"
                android:text="@string/login_with_google"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOr" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLoginFacebook"
                style="@style/LoginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_top"
                android:backgroundTint="#80DEEA"
                android:drawableLeft="@drawable/ic_facebook"
                android:text="@string/login_with_facebook"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLoginGoogle" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvHasAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_top"
                android:layout_marginBottom="@dimen/item_margin_bottom"
                android:text="@string/do_you_have_an_account"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="#80000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLoginFacebook">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:backgroundTint="#FFAB91"
                android:text="@string/sign_up"
                style="@style/LoginButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHasAccount" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>