<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/fragment_horizontal_margin"
            android:paddingTop="@dimen/fragment_vertical_margin"
            android:paddingRight="@dimen/fragment_horizontal_margin"
            android:paddingBottom="@dimen/fragment_vertical_margin"
            tools:context=".ui.feature.login.LoginFragment">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/firebase_demo"
                android:textAlignment="center"
                android:textColor="#512DA8"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent">


            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmailLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:hint="@string/prompt_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="this is invisible notification for UserName"
                    android:textColor="#F15B5B"
                    android:visibility="invisible" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmailLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="this is invisible notification for UserName"
                    android:textColor="#F15B5B"
                    android:visibility="invisible"></TextView>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login_forgot_password"
                android:textColor="@color/purple_500"
                app:layout_constraintEnd_toEndOf="@id/etPasswordLayout"
                app:layout_constraintTop_toBottomOf="@id/etPasswordLayout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/LoginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#FFAB91"
                android:text="Login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                style="@style/LoginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:backgroundTint="#C5E1A5"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoogleLogin"
                style="@style/LoginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFCDD2"
                android:drawableLeft="@drawable/ic_google"
                android:text="@string/login_with_google"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnSignUp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoogleSignUp"
                style="@style/LoginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#BBDEFB"
                android:drawableLeft="@drawable/ic_google"
                android:text="@string/sign_up_with_google"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnGoogleLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>